--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,7 +15,7 @@
         </svg>
       </span>
     </label>
-    <h3>SU Group @HKUST</h3>
+    <div><h3>SU Group @HKUST</h3></div>
     <a id="mode">
       <svg
         class="mode-sunny"
