--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -16,7 +16,7 @@
       </span>
     </label>
     <div><h3>SU Group @HKUST</h3></div>
-    <a id="mode">
+    <!--<a id="mode">
       <svg
         class="mode-sunny"
         xmlns="http://www.w3.org/2000/svg"
@@ -159,7 +159,7 @@
           style="stroke-linecap:round;stroke-miterlimit:10;stroke-width:32px"
         />
       </svg>
-    </a>
+    </a>-->
     <div class="trigger">
       <div class="trigger-container">
         {%- assign url = page.url -%}
