--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,7 +15,7 @@
         </svg>
       </span>
     </label>
-    <div><h3>SU Group @HKUST</h3></div>
+    <div><div><h3>SU Group @HKUST</h3></div></div>
     <!--<a id="mode">
       <svg
         class="mode-sunny"
