--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -160,6 +160,7 @@
       </svg>
     </a>-->
     <div class="trigger">
+      <div><h3>SU Group @HKUST</h3></div>
       <div class="trigger-container">
         {%- assign url = page.url -%}
         {%- assign menus = site.data.menus -%}
