--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar" role="navigation">
+<div class="navbar" role="navigation"><div><h3>SU Group @HKUST</h3></div>
   <nav class="menu">
     <input type="checkbox" id="menu-trigger" class="menu-trigger" />
     <label for="menu-trigger">
@@ -160,7 +160,6 @@
       </svg>
     </a>-->
     <div class="trigger">
-      <div><h3>SU Group @HKUST</h3></div>
       <div class="trigger-container">
         {%- assign url = page.url -%}
         {%- assign menus = site.data.menus -%}
