--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar" role="navigation"><div><h4>SU Group @HKUST</h4></div>
+<div class="navbar" role="navigation">
   <nav class="menu">
     <input type="checkbox" id="menu-trigger" class="menu-trigger" />
     <label for="menu-trigger">
@@ -159,6 +159,7 @@
         />
       </svg>
     </a>-->
+    <div class="trigger"><h4>SU Group @HKUST</h4></div>
     <div class="trigger">
       <div class="trigger-container">
         {%- assign url = page.url -%}
