--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 <div class="navbar" role="navigation">
-  <div class="menu-trigger"><h4>SU Group @HKUST</h4></div>
+  <div class="menu-trigger"><h4>SU Group @HKUST SU Group @HKUST SU Group @HKUST SU Group @HKUST SU Group @HKUST SU Group @HKUST SU Group @HKUST SU Group @HKUST</h4></div>
   <nav class="menu">
     <input type="checkbox" id="menu-trigger" class="menu-trigger" />
     <label for="menu-trigger">
