--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,4 @@
 <div class="navbar" role="navigation">
-  <div class="menu-trigger"><h4>SU Group @HKUST SU Group @HKUST SU Group @HKUST SU Group @HKUST SU Group @HKUST SU Group @HKUST SU Group @HKUST SU Group @HKUST</h4></div>
   <nav class="menu">
     <input type="checkbox" id="menu-trigger" class="menu-trigger" />
     <label for="menu-trigger">
@@ -16,6 +15,7 @@
         </svg>
       </span>
     </label>
+    <h3>SU Group @HKUST</h3>
     <!--<a id="mode">
       <svg
         class="mode-sunny"
