--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,7 +15,6 @@
         </svg>
       </span>
     </label>
-    <a><h3>SU Group @HKUST</h3></a>
     <!--<a id="mode">
       <svg
         class="mode-sunny"
@@ -161,6 +160,7 @@
       </svg>
     </a>-->
     <div class="trigger">
+      <h3>SU Group @HKUST</h3>
       <div class="trigger-container">
         {%- assign url = page.url -%}
         {%- assign menus = site.data.menus -%}
