--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,6 @@
 <div class="navbar" role="navigation">
   <nav class="menu">
-    <input type="checkbox" id="menu-trigger" class="menu-trigger" />
+    <!--<input type="checkbox" id="menu-trigger" class="menu-trigger" />
     <label for="menu-trigger">
       <span class="menu-icon">
         <svg
@@ -14,7 +14,7 @@
           />
         </svg>
       </span>
-    </label>
+    </label>-->
     <!--<a id="mode">
       <svg
         class="mode-sunny"
