--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,6 @@
 <div class="navbar" role="navigation">
   <nav class="menu">
-    <h3>SU Group @HKUST</h3>
+    SU Group @HKUST
     <!--<input type="checkbox" id="menu-trigger" class="menu-trigger" />
     <label for="menu-trigger">
       <span class="menu-icon">
