--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -184,7 +184,8 @@
           {%- endfor -%}
         {%- else -%}
           <a class="menu-link {% if url == '/' %}active{% endif %}" href="/">home</a>
-          <a class="menu-link {% if url == '/about/' %}active{% endif %}" href="/about">about</a>
+          <a class="menu-link {% if url == '/research/' %}active{% endif %}" href="/about">research</a>
+          <a class="menu-link {% if url == '/publications/' %}active{% endif %}" href="/about">publications</a>
         {%- endif -%}
         <!--<a class="menu-link rss" href="/feed.xml">
           <svg
