--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,8 @@ layout: default
 home: true
 ---
 
+<h3>Research</h3>
+
 <h3 class="posts-item-note" aria-label="Recent Posts">Recent News</h3>
 {%- for post in site.posts limit: site.number_of_posts -%}
 <article class="post-item">
