--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,9 +7,9 @@ layout: default
     <h3 class="fw-bold">Our Vision</h3>
     {{ content }}
   </div>
-  <div class="col-md-6">
+  <!--<div class="col-md-6">
     <img src="{{ site.github.url }}/assets/img/home.jpg" alt="Home" width="100%">
-  </div>
+  </div>-->
 </div>
 
 {% include publications.html %}
