--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="row g-5 mb-5 align-items-center">
+<div class="row g-5 mb-5">
   <div class="col-md-12">
     <h3 class="fw-bold">Our Vision</h3>
     {{ content }}
