--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -1,11 +1,12 @@
 <div class="row g-5 mb-5">
   <div>
-    <h3 class="fw-bold border-top pb-3 mb-5"> Featured Publications</h3>
     {% if page.title == "Home" %}
+      <h3 class="fw-bold pb-3 mb-5">Featured Publications</h3>
       {% for item in site.data.publications.featured %}
         <p><a href="{{ item.url }}">{{ item.name }}</a></p>
       {% endfor %}
     {% else %}
+      <h3 class="fw-bold pb-3 mb-5">Publications</h3>
       {% for item in site.data.publications.index %}
         <p><a href="{{ item.url }}">{{ item.name }}</a></p>
       {% endfor %}
