--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,13 +4,18 @@ layout: default
 
 <div class="row g-5 mb-5">
   <div class="col-md-12">
-    <h3 class="fw-bold">Our Vision</h3>
+    <h3 class="fw-bold pb-3 mb-5">Our Vision</h3>
     {{ content }}
   </div>
   <!--<div class="col-md-6">
     <img src="{{ site.github.url }}/assets/img/home.jpg" alt="Home" width="100%">
   </div>-->
 </div>
+
+<div class="row g-5 mb-5">
+  <h3 class="fw-bold pb-3 mb-5">Research</h3>
+</div>
+
 
 {% include publications.html %}
 
