--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="row g-5 mb-5">
   <div class="col-md-12">
-    <h3 class="fw-bold pb-3 mb-5">Our Vision</h3>
+    <h3 class="fw-bold">Our Vision</h3>
     {{ content }}
   </div>
   <!--<div class="col-md-6">
@@ -13,7 +13,7 @@ layout: default
 </div>
 
 <div class="row g-5 mb-5">
-  <h3 class="fw-bold pb-3 mb-5">Research</h3>
+  <h3 class="fw-bold">Research</h3>
 </div>
 
 
@@ -21,7 +21,7 @@ layout: default
 
 <div class="row g-5 mb-5">
   <div class="col-md-12">
-    <h3 class="fw-bold border-bottom pb-3 mb-5">Updates</h3>
+    <h3 class="fw-bold border-bottom">Updates</h3>
     {% for post in site.posts %}
       <p><a href="{{ site.github.url }}/{{ post.url }}">{{ post.title }}</a> - {{ post.date | date: "%B %-d, %Y" }}</p>
     {% endfor %}
