--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -1,5 +1,5 @@
 <div class="row g-5 mb-5">
-  <div>
+  <div class="col-md-12">
     {% if page.title == "Home" %}
       <h3 class="fw-bold">Featured Publications</h3>
       {% for item in site.data.publications.featured %}
