--- a/_includes/news.html
+++ b/_includes/news.html
@@ -3,7 +3,7 @@
     {% if page.title == "Home" %}
       <h3 class="fw-bold">Recent News</h3>
       {% for post in site.posts limit: site.number_of_posts %}
-        <p><a href="{{ site.github.url }}/{{ post.url }}">{{ post.title }}</a> - {{ post.date | date: "%B %-d, %Y" }}</p>
+        <p><a href="{{ post.url }}">{{ post.title }}</a> - {{ post.date | date: "%B %-d, %Y" }}</p>
       {% endfor %}
     {% else %}
       <h3 class="fw-bold">News</h3>
