--- a/_includes/news.html
+++ b/_includes/news.html
@@ -8,7 +8,7 @@
     {% else %}
       <h3 class="fw-bold">News</h3>
       {% for post in site.posts %}
-        <p><a href="{{ site.github.url }}/{{ post.url }}">{{ post.title }}</a> - {{ post.date | date: "%B %-d, %Y" }}</p>
+        <p class="mb-1"><span class="fw-bold">{{ post.date | date: "%B %-d, %Y" }} </span><a href="{{ post.url }}">{{ post.title }} >></a></p>
       {% endfor %}
     {% endif %}
   </div>
