--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -3,7 +3,10 @@
     {% if page.title == "Home" %}
       <h3 class="fw-bold">Featured Publications</h3>
       {% for item in site.data.publications.featured %}
-        <p class="mb-1"><a href="{{ item.url }}">{{ item.name }}</a></p>
+        <p class="mb-1">
+          <p>{{ item.name }} </p>
+          <a href="{{ item.url }}">[pdf]</a>
+        </p>
       {% endfor %}
     {% else %}
       <h3 class="fw-bold">Publications</h3>
