--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="row g-5 mb-5">
   <div class="col-md-12">
-    <h3 class="fw-bold text-xl-center">Our Vision</h3>
+    <h3 class="fw-bold">Our Vision</h3>
     {{ content }}
   </div>
   <!--<div class="col-md-6">
