--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -3,7 +3,7 @@
     {% if page.title == "Home" %}
       <h3 class="fw-bold">Featured Publications</h3>
       {% for item in site.data.publications.featured %}
-        <p class="mb-1"><p class="fw-bold">{{ item.name }} </p><p class="fst-italic">{{ item.journal }}</p><a href="{{ item.url }}">[pdf]</a></p>
+        <p class="mb-1"><span class="fw-bold">{{ item.name }} </span><span class="fst-italic">{{ item.journal }}</span><a href="{{ item.url }}">[pdf]</a></p>
       {% endfor %}
     {% else %}
       <h3 class="fw-bold">Publications</h3>
