--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -4,7 +4,7 @@
       <h3 class="fw-bold">Featured Publications</h3>
       {% for item in site.data.publications.featured %}
         <p class="mb-1">
-          <span class="fw-bold">{{ item.name }} </span><span class="fst-italic">{{ item.journal }}</span><a href="{{ item.url }}"> [pdf]</a>
+          <span class="fw-bold">{{ item.name }}. </span><span class="fst-italic">{{ item.journal }} </span><a href="{{ item.url }}">[pdf]</a>
         </p>
       {% endfor %}
     {% else %}
