--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,7 +1,7 @@
 $backgroundColor: #ffffff;
 $bodyColor: #000000;
 $bodyFont: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-$linkColor: #4472C4 !important;
+$linkColor: #212529 !important;
 
 body {
   background: $backgroundColor;
@@ -12,8 +12,4 @@ body {
 body a {
   color: $linkColor;
   text-decoration : none;
-}
-
-il {
-  text-indent: -0.75em;
 }
