--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -2,7 +2,7 @@
   <div class="col-md-12">
     {% if page.title == "Home" %}
       <h3 class="fw-bold">Featured Publications</h3>
-      <ul>
+      <ul class="list-style-position-inside">
         {% for item in site.data.publications.featured %}
         <li><span>{{ item.name }} </span><span class="fst-italic">{{ item.journal }} </span><a href="{{ item.url }}">[pdf]</a></li>
         {% endfor %}
