--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -2,16 +2,18 @@
   <div class="col-md-12">
     {% if page.title == "Home" %}
       <h3 class="fw-bold">Featured Publications</h3>
-      <ul class="list-style-position-inside">
+      <ul>
         {% for item in site.data.publications.featured %}
-        <li><span>{{ item.name }} </span><span class="fst-italic">{{ item.journal }} </span><a href="{{ item.url }}">[pdf]</a></li>
+        <li><span>{{ item.name }} </span><span class="fst-italic">{{ item.journal }} </span><a href="{{ item.src }}">[pdf]</a></li>
         {% endfor %}
       </ul>
     {% else %}
       <h3 class="fw-bold">Publications</h3>
-      {% for item in site.data.publications.index %}
-        <p class="mb-1"><a href="{{ item.url }}">{{ item.name }}</a></p>
+      <ol reversed class="fw-bold">Peer-reviewed journals
+      {% for item in site.data.publications.journal %}
+        <li><span>{{ item.author }} ({{ item.year }}). {{ item.name }} </span><span class="fst-italic">{{ item.journal }} </span><span>{{ item.volume }}. </span><a href="{{ item.src }}">[pdf]</a></li>
       {% endfor %}
+      </ol>
     {% endif %}
   </div>
 </div>
