--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -8,8 +8,8 @@
         {% endfor %}
       </ul>
     {% else %}
-      <h3 class="fw-bold">Publications</h3>
-      <ol reversed><h4 class="fw-bold">Peer-reviewed journals</h4>
+      <h3 class="fw-bold text-xl-center">Publications</h3>
+      <ol reversed><h5 class="fw-bold">Peer-reviewed journals</h5>
       {% for item in site.data.publications.journal %}
         <li><span>{{ item.author }} ({{ item.year }}). {{ item.name }} </span><span class="fst-italic">{{ item.journal }} </span><span>{{ item.volume }}. </span><a href="{{ item.src }}">[pdf]</a></li>
       {% endfor %}
