--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -11,7 +11,12 @@
       <h3 class="fw-bold text-center mb-3">Publications</h3>
       <ol reversed><h5 class="fw-bold">Peer-reviewed journals</h5>
       {% for item in site.data.publications.journal %}
-        <li><span>{{ item.author }} ({{ item.year }}). {{ item.name }} </span><span class="fst-italic text-decoration-underline">{{ item.journal }} </span><span>{{ item.volume }}. </span><a href="{{ item.src }}">[pdf]</a><a href="{{ item.doi }}">[doi]</a></li>
+        <li><span>{{ item.author }} ({{ item.year }}). {{ item.name }} </span><span class="fst-italic">{{ item.journal }} </span><span>{{ item.volume }}. </span><a href="{{ item.src }}">[pdf]</a><a href="{{ item.doi }}">[doi]</a></li>
+      {% endfor %}
+      </ol>
+      <ol reversed><h5 class="fw-bold">Peer-reviewed conference proceedings</h5>
+      {% for item in site.data.publications.conference %}
+        <li><span>{{ item.author }} ({{ item.year }}). {{ item.name }} </span><span class="fst-italic">{{ item.conf }} </span><span>{{ item.volume }}. </span><a href="{{ item.src }}">[pdf]</a><a href="{{ item.doi }}">[doi]</a></li>
       {% endfor %}
       </ol>
     {% endif %}
