--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -8,7 +8,7 @@
         {% endfor %}
       </ul>
     {% else %}
-      <h3 class="fw-bold text-center mb-3">Publications</h3>
+      <h3 class="fw-bold text-xl-center mb-3">Publications</h3>
       <ol reversed><h5 class="fw-bold">Peer-reviewed journals</h5>
       {% for item in site.data.publications.journal %}
         <li><span>{{ item.author }} ({{ item.year }}). {{ item.title }} </span><span class="fst-italic">{{ item.journal }} </span><span>{{ item.volume }}. </span><a href="{{ item.src }}">[pdf]</a><a href="{{ item.doi }}">[doi]</a></li>
