--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -14,11 +14,11 @@
         <li><span>{{ item.author }} ({{ item.year }}). {{ item.title }} </span><span class="fst-italic">{{ item.journal }} </span><span>{{ item.volume }}. </span><a href="{{ item.src }}">[pdf]</a><a href="{{ item.doi }}">[doi]</a></li>
       {% endfor %}
       </ol>
-      <ol reversed><h5 class="fw-bold">Peer-reviewed conference proceedings</h5>
+      <!--<ol reversed><h5 class="fw-bold">Peer-reviewed conference proceedings</h5>
       {% for item in site.data.publications.conference %}
         <li><span>{{ item.author }} ({{ item.year }}). {{ item.title }} </span><span class="fst-italic">{{ item.conf }} </span><span>{{ item.volume }}. </span><a href="{{ item.src }}">[pdf]</a><a href="{{ item.doi }}">[doi]</a></li>
       {% endfor %}
-      </ol>
+      </ol>-->
     {% endif %}
   </div>
 </div>
