--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -10,6 +10,11 @@
     {% else %}
       <h3 class="fw-bold text-xl-center mb-3">Publications</h3>
       <ol reversed><h5 class="fw-bold">Peer-reviewed journals</h5>
+      {% for item in site.data.publications.preprint %}
+        <li><span>{{ item.author }} ({{ item.year }}). {{ item.title }} </span><a href="{{ item.src }}">[pdf]</a></li>
+      {% endfor %}
+      </ol>
+      <ol reversed><h5 class="fw-bold">Peer-reviewed journals</h5>
       {% for item in site.data.publications.journal %}
         <li><span>{{ item.author }} ({{ item.year }}). {{ item.title }} </span><span class="fst-italic text-decoration-underline">{{ item.journal }} </span><span>{{ item.volume }}. </span><a href="{{ item.src }}">[pdf]</a><a href="{{ item.doi }}">[doi]</a></li>
       {% endfor %}
