--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -9,7 +9,7 @@
       </ul>
     {% else %}
       <h3 class="fw-bold text-xl-center mb-3">Publications</h3>
-      <ol reversed><h5 class="fw-bold">Peer-reviewed journals</h5>
+      <ol reversed><h5 class="fw-bold">Preprints</h5>
       {% for item in site.data.publications.preprint %}
         <li><span>{{ item.author }} ({{ item.year }}). {{ item.title }} </span><a href="{{ item.src }}">[pdf]</a></li>
       {% endfor %}
