--- a/_includes/news.html
+++ b/_includes/news.html
@@ -6,7 +6,7 @@
         <p class="mb-1"><span class="fw-bold">{{ post.date | date: "%B %-d, %Y" }} </span><a href="{{ post.url }}">{{ post.title }} >></a></p>
       {% endfor %}
     {% else %}
-      <h3 class="fw-bold">News</h3>
+      <h3 class="fw-bold text-xl-center mb-3">News</h3>
       {% for post in site.posts %}
         <p class="mb-1"><span class="fw-bold">{{ post.date | date: "%B %-d, %Y" }} </span><a href="{{ post.url }}">{{ post.title }} >></a></p>
       {% endfor %}
