--- a/_includes/news.html
+++ b/_includes/news.html
@@ -9,9 +9,10 @@
     {% else %}
       <h3 class="fw-bold text-xl-center mb-3">News</h3>
       {% for post in site.posts %}
-        <h5 class="fw-bold mb-0">{{ post.title }}</h5>
-        <p class="mt-0">{{ post.date | date: "%B %-d, %Y" }}</p>
-        <p class="mb=5 mt=0 border-bottom">{{ post.content }}</p>
+        <p class="mb-5">
+          <h5 class="fw-bold mb-0">{{ post.title }}</h5>{{ post.date | date: "%B %-d, %Y" }}
+          <span>{{ post.content }}</span>
+        </p>
       {% endfor %}
     {% endif %}
   </div>
