--- a/_layouts/vacancies.html
+++ b/_layouts/vacancies.html
@@ -3,3 +3,9 @@ layout: default
 ---
 
 {{ content }}
+
+<div class="row g-5 mb-5">
+  <div class="col-md-12">
+    <h3 class="fw-bold text-xl-center mb-3">Open positions</h3>
+  </div>
+</div>
