--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -4,9 +4,10 @@ layout: default
 
 {{ content }}
 
-<h3 class="fw-bold border-bottom pb-3 mb-5">People</h3>
-{% for person in site.data.settings.people %}
 <div class="row g-5 mb-5">
+<h3 class="fw-bold text-xl-center mb-3">People</h3>
+<h5 class="fw-bold">Primary Investigator</h5>
+{% for person in site.data.people.PI %}
   <div class="col-md-6">
     <h5>{{ person.name }}</h5>
     <p>Email: {{ person.email }}</p>
