--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -29,6 +29,7 @@ body a {
   /*for demo*/
   display:inline-block;
   vertical-align:middle;
+  float: center;
 }
 .circular_image img{
   width:100%;
