--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -13,6 +13,7 @@ layout: default
     <h6 class="fw-bold mb-1 mt=1 text-xl-center">{{ person.name }}</h6>
     <p class="mb-0 text-xl-center">Email: {{ person.email }}</p>
     <p class="mb-0 text-xl-center">Phone: {{ person.phone }}</p>
+    <p class="mb-0 text-xl-center">Room : {{ person.office }}</p>
     <p class="mb-0 fst-italic text-xl-center"><a href="/people/{{ person.url }}">More info</a></p>
   </div>
 {% endfor %}
