--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -19,17 +19,15 @@ body a {
   height: 200px;
   border-radius: 50%;
   overflow: hidden;
-  background-color: blue;
-  /* commented for demo
+  background-color: $backgroundColor;
+  /* commented for demo */
   float: left;
   margin-left: 125px;
   margin-top: 20px;
-  */
 
-  /*for demo*/
+  /*for demo
   display:inline-block;
-  vertical-align:middle;
-  float: center;
+  vertical-align:middle;*/
 }
 .circular_image img{
   width:100%;
