--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -18,7 +18,7 @@ layout: default
   </div>
 {% endfor %}
 <div class="col-md-12">
-  <h5 class="fw-bold text-xl-center mb-1"><a href="/vacancies">Join Us</a></h5>
+  <h5 class="fw-bold text-xl-center mb-1 bluelink"><a href="/vacancies">Join Us</a></h5>
 </div>
 </div>
 
