--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -10,15 +10,15 @@ layout: default
 {% for person in site.data.people.PI %}
   <div class="col-md-4">
     <div class="circular_image"><img src="{{ person.image }}" /></div>
-    <h6 class="fw-bold mb-1 mt=1 text-xl-center">{{ person.name }}</h6>
-    <p class="mb-0 text-xl-center">Email: {{ person.email }}</p>
-    <p class="mb-0 text-xl-center">Phone: {{ person.phone }}</p>
-    <p class="mb-0 text-xl-center">Room : {{ person.office }}</p>
-    <p class="mb-0 fst-italic text-xl-center"><a href="/people/{{ person.url }}">More info</a></p>
+    <h6 class="fw-bold mb-1 mt=1">{{ person.name }}</h6>
+    <p class="mb-0">Email: {{ person.email }}</p>
+    <p class="mb-0">Phone: {{ person.phone }}</p>
+    <p class="mb-0">Room : {{ person.office }}</p>
+    <p class="mb-0"><a href="/people/{{ person.url }}">More info</a></p>
   </div>
 {% endfor %}
 <div class="col-md-12">
-  <h5 class="fw-bold text-xl-center mb-1 bluelink"><a href="/vacancies">Join Us</a></h5>
+  <h5 class="fw-bold text-xl-center mb-1"><a href="/vacancies">Join Us</a></h5>
 </div>
 </div>
 
