--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -9,12 +9,12 @@ layout: default
 <h5 class="fw-bold">Primary Investigator</h5>
 {% for person in site.data.people.PI %}
   <div class="col-md-4">
-    <p class="circular_image"><img src="{{ person.image }}" /> </p>
-    <h6 class="fw-bold mb-1 mt=1">{{ person.name }} </h6>
-    <p class="mb-0">Email: {{ person.email }} </p>
-    <p class="mb-0">Phone: {{ person.phone }} </p>
-    <p class="mb-0">Room : {{ person.office }} </p>
-    <p class="mb-0"><a href="/people/{{ person.url }}">More info</a> </p>
+    <p class="circular_image"><img src="{{ person.image }}" /></p><br>
+    <h6 class="fw-bold mb-1 mt=1">{{ person.name }}</h6>
+    <p class="mb-0">Email: {{ person.email }}</p>
+    <p class="mb-0">Phone: {{ person.phone }}</p>
+    <p class="mb-0">Room : {{ person.office }}</p>
+    <p class="mb-0"><a href="/people/{{ person.url }}">More info</a></p>
   </div>
 {% endfor %}
 <div class="col-md-12">
