--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -10,7 +10,7 @@ layout: default
 {% for person in site.data.people.PI %}
   <div class="col-md-4">
     <div class="col-md-4 circular_image"><img src="{{ person.image }}" /></div>
-    <h6 class="fw-bold mb-1 mt=1">{{ person.name }}</h6>
+    <h6 class="fw-bold mb-1 mt=1 text-xl-center">{{ person.name }}</h6>
     <p class="mb-0">Email: {{ person.email }}</p>
     <p class="mb-0">Phone: {{ person.phone }}</p>
     <p class="mb-0">Room : {{ person.office }}</p>
