--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -21,7 +21,7 @@ body a {
   overflow: hidden;
   background-color: $backgroundColor;
   /* commented for demo */
-  float: left;
+  vertical-align: left;
   margin-left: 10px;
   margin-top: 0px;
   margin-bottom: 20px;
