--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -4,9 +4,9 @@ layout: default
 
 {{ content }}
 
-<div class="row g-5 mb-5">
+<div class="row g-5 mb-3">
 <h3 class="fw-bold text-xl-center mb-1">Research Team</h3>
-<h5 class="fw-bold">Primary Investigator</h5>
+<h5 class="fw-bold mb-2">Primary Investigator</h5>
 {% for person in site.data.people.PI %}
   <div class="col-md-4">
     <div class="circular_image"><img src="{{ person.image }}" /></div>
