--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -14,7 +14,7 @@ layout: default
     <p class="mb-0">Email: {{ person.email }}</p>
     <p class="mb-0">Phone: {{ person.phone }}</p>
     <p class="mb-0">Room : {{ person.office }}</p>
-    <p class="mb-0"><a href="{{ person.cv }}">full CV</a></p>
+    <p class="mb-0"><a href="{{ person.cv }}">Full CV</a><a href="{{ person.googlescholar }}"><img src="google-scholar.svg" height=25px></a></p>
   </div>
 {% endfor %}
 <div class="col-md-12">
