--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -10,12 +10,12 @@ body {
   font-family: $bodyFont;
 }
 
-body a {
+a.one {
   color: $linkColor;
   text-decoration : none;
 }
 
-a.one {
+a.two {
   color: $linkColorbody;
 }
 
