--- a/_includes/news.html
+++ b/_includes/news.html
@@ -3,9 +3,9 @@
     {% if page.title == "Home" %}
       <h3 class="fw-bold">Recent News</h3>
       {% for post in site.posts limit: site.number_of_posts %}
-        <p class="mb-1"><span class="fw-bold">{{ post.date | date: "%B %-d, %Y" }} </span><a href="{{ post.url }}">{{ post.title }} >></a></p>
+        <p class="mb-1"><span class="fw-bold">{{ post.date | date: "%B %-d, %Y" }} </span><a class="two" href="{{ post.url }}">{{ post.title }} >></a></p>
       {% endfor %}
-      <p class="mt-2 fst-italic"><a href="/news">read more news</a></p>
+      <p class="mt-2 fst-italic"><a class="two" href="/news">read more news</a></p>
     {% else %}
       <h3 class="fw-bold text-xl-center mb-3">News</h3>
       {% for post in site.posts %}
