--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,7 +2,7 @@ $backgroundColor: #ffffff;
 $bodyColor: #000000;
 $bodyFont: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 $linkColor: #212529;
-$linkColorbody: #5B9BD5;
+$linkColorbody: #4472C4;
 
 body {
   background: $backgroundColor;
