--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -14,7 +14,7 @@ layout: default
     <p class="mb-0">Email: {{ person.email }}</p>
     <p class="mb-0">Phone: {{ person.phone }}</p>
     <p class="mb-0">Room : {{ person.office }}</p>
-    <p class="mb-0">More info: <a href="{{ person.cv }}">Full CV </a><a href="{{ person.googlescholar }}"><img src="assets/img/google-scholar.svg" height=20px margin-right=10px></a><a href="{{ person.researchgate }}"><img src="assets/img/icon-researchgate.svg" height=20px margin-right=10px></a><a href="{{ person.linkdin }}"><i class="fab fa-linkedin"></i></a></p>
+    <p class="mb-0">More info: <a class="two" href="{{ person.cv }}">Full CV </a><a class="two" href="{{ person.googlescholar }}"><i class="fab fa-google-scholar"></i></a><a class="two" href="{{ person.researchgate }}"><img src="assets/img/icon-researchgate.svg" height=20px margin-right=10px></a><a class="two" href="{{ person.linkdin }}"><i class="fab fa-linkedin"></i></a></p>
   </div>
 {% endfor %}
 <div class="col-md-12">
