--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,13 +7,13 @@ layout: default
     <h3 class="fw-bold">Our Vision</h3>
     {{ content }}
   </div>
-  <!--<div class="col-md-6">
-    <img src="{{ site.github.url }}/assets/img/home.jpg" alt="Home" width="100%">
-  </div>-->
 </div>
 
 <div class="row g-5 mb-5">
   <h3 class="fw-bold">Research</h3>
+  <div class="col-md-6">
+    <h5 class="fw-bold text-xl-center">Multiscale</h5>
+  </div>
 </div>
 
 
