--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,6 +14,7 @@ layout: default
   <div class="col-md-6">
     <h5 class="fw-bold text-xl-center">Multiscale</h5>
   </div>
+  <p class="mt-2 fst-italic"><a class="two" href="/research">read all research topics</a></p>
 </div>
 
 
