--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <div class="row g-5 mb-5">
   <div class="col-md-12">
     <h3 class="fw-bold">{{ page.title }}</h3>
-    <span class="fst-italic">{{ post.date | date: "%B %-d, %Y" }}</span>
+    <span class="fst-italic">{{ page.date | date: "%B %-d, %Y" }}</span>
     {{ content }}
   </div>
 </div>
