--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,6 +14,12 @@ layout: default
   <div class="col-md-6">
     <h5 class="fw-bold text-xl-center">Multiscale</h5>
   </div>
+  <div class="col-md-6"></div>
+  <div class="col-md-6">
+    <h5 class="fw-bold text-xl-center">High-order discontinuous Galerkin method for kinetic equations/macroscopic equations</h5>
+  </div>
+  <div class="col-md-6"></div>
+
   <p class="mt-2 fst-italic"><a class="two" href="/research">read full research topics</a></p>
 </div>
 
