--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,11 +12,15 @@ layout: default
 <div class="row g-2 mb-2">
   <h3 class="fw-bold">Research</h3>
   <div class="col-md-6">
-    <h5 class="fw-bold text-xl-center">Multiscale</h5>
+    <ul><h5 class="fw-bold">Multiscale</h5>
+      <li></li>
+    </ul>
   </div>
   <div class="col-md-6"></div>
   <div class="col-md-6">
-    <h5 class="fw-bold text-xl-center">High-order discontinuous Galerkin method for kinetic equations/macroscopic equations</h5>
+    <ul><h5 class="fw-bold">High-order discontinuous Galerkin method for kinetic equations/macroscopic equations</h5>
+      <li></li>
+    </ul>
   </div>
   <div class="col-md-6"></div>
 
