--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,15 +12,11 @@ layout: default
 <div class="row g-2 mb-2">
   <h3 class="fw-bold">Research</h3>
   <div class="col-md-6">
-    <ul><h5 class="fw-bold">Multiscale</h5>
-      <li></li>
-    </ul>
+    <h5 class="fw-bold">Multiscale</h5>
   </div>
   <div class="col-md-6"></div>
   <div class="col-md-6">
-    <ul><h5 class="fw-bold">High-order discontinuous Galerkin method for kinetic equations/macroscopic equations</h5>
-      <li></li>
-    </ul>
+    <h5 class="fw-bold">High-order discontinuous Galerkin method for kinetic equations/macroscopic equations</h5>
   </div>
   <div class="col-md-6"></div>
 
