--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,7 +12,8 @@ layout: default
 <div class="row g-2 mb-2">
   <h3 class="fw-bold">Research</h3>
   <div class="col-md-6">
-    <h5 class="fw-bold">Multiscale</h5>
+    <h5 class="fw-bold">Numerical schemes for multiscale transport phenomena</h5>
+    <p></p>
   </div>
   <div class="col-md-6"></div>
   <div class="col-md-6">
