--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,8 +12,8 @@ layout: default
 <div class="row g-2 mb-2">
   <h3 class="fw-bold">Research</h3>
   <div class="col-md-6">
-    <h5 class="fw-bold">Numerical schemes for multiscale transport phenomena</h5>
-    <p></p>
+    <h5 class="fw-bold">Numerical schemes for multiscale computation</h5>
+    <p>We develop efficient and accurate numerical schemes to reconstruct multiscale transport phenomena reliably.</p>
   </div>
   <div class="col-md-6"></div>
   <div class="col-md-6">
