--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,7 +12,7 @@ layout: default
 <div class="row g-5 mb-5">
   <h3 class="fw-bold">Research</h3>
   <div class="col-md-6">
-    <li><h6 class="fw-bold">Numerical schemes for multiscale computation</h6></li>
+    <h6 class="fw-bold">Numerical schemes for multiscale computation</h6>
     <p>We develop efficient and accurate numerical schemes to reconstruct multiscale transport phenomena reliably.</p>
   </div>
   <div class="col-md-6"></div>
