--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ layout: default
     <h3 class="fw-bold text-xl-center mb-3">Research</h3>
     <div class="col-md-6">
       <h6 class="fw-bold">Numerical methods for multiscale computation</h6>
-      <p>We put forward a general synthetic iterative scheme (GSIS) for reconstructing multiscale gas/phonon transport phenomena reliably. The scheme has merits of fast convergence and asymptotic preserving. Compared to the conventional iterative scheme (CIS), it reduces consuming of computational resources by several orders of magnitude.</p>
+      <p class="justify">We put forward a general synthetic iterative scheme (GSIS) for reconstructing multiscale gas/phonon transport phenomena reliably. The scheme has merits of fast convergence and asymptotic preserving. Compared to the conventional iterative scheme (CIS), it reduces consuming of computational resources by several orders of magnitude.</p>
     </div>
     <div class="col-md-6"></div>
     <div class="col-md-6"></div>
