--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,7 +17,7 @@ layout: default
       <p>We put forward a general synthetic iterative scheme (GSIS) for steady/transient solutions of kinetic equations and reconstructing multiscale gas/phonon transport phenomena reliably. The scheme has merits of fast convergence and asymptotic preserving, and can reduce consuming of computational resources by several orders of magnitude.</p>
     </div>
     <div class="col-md-6">
-      <img src="/assets/img/1DFourier_decay_GSIS.pdf">
+      <img src="/assets/img/1DFourier_decay_GSIS.jpg">
     </div>
     <div class="col-md-6"></div>
     <div class="col-md-6">
