--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,9 +16,7 @@ layout: default
       <h6 class="fw-bold">Numerical methods for multiscale computation</h6>
       <p>We put forward a general synthetic iterative scheme (GSIS) for steady/transient solutions of kinetic equations and reconstructing multiscale gas/phonon transport phenomena reliably. The scheme has merits of fast convergence and asymptotic preserving, and can reduce consuming of computational resources by several orders of magnitude.</p>
     </div>
-    <div class="col-md-6">
-      <img src="/assets/img/1DFourier_decay_GSIS.jpg">
-    </div>
+    <div class="col-md-6 rect_image"><img src="/assets/img/1DFourier_decay_GSIS.jpg"></div>
     <div class="col-md-6"></div>
     <div class="col-md-6">
       <h6 class="fw-bold">Discontinuous Galerkin method for kinetic equations/macroscopic equations</h6>
