--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,11 +12,10 @@ layout: default
 <div class="row g-5 mb-5">
   <div class="col-md-12">
     <h3 class="fw-bold text-xl-center mb-3">Research</h3>
-    <div class="col-md-6">
+    <div class="col-md-12">
       <h6 class="fw-bold">Numerical methods for multiscale computation</h6>
-      <p>We put forward a general synthetic iterative scheme (GSIS) for steady/transient solutions of kinetic equations and reconstructing multiscale gas/phonon transport phenomena reliably. The scheme has merits of fast convergence and asymptotic preserving, and can reduce consuming of computational resources by several orders of magnitude.</p>
+      <p>We put forward a general synthetic iterative scheme (GSIS) for steady/transient solutions of kinetic equations and reconstructing multiscale gas/phonon transport phenomena reliably. The scheme has merits of fast convergence and asymptotic preserving, and can reduce consuming of computational resources by several orders of magnitude.</p><p class="rect_image"><img src="/assets/img/1DFourier_decay_GSIS.jpg"></p>
     </div>
-    <div class="col-md-6 rect_image"><img src="/assets/img/1DFourier_decay_GSIS.jpg"></div>
     <div class="col-md-6"></div>
     <div class="col-md-6">
       <h6 class="fw-bold">Discontinuous Galerkin method for kinetic equations/macroscopic equations</h6>
