--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -47,7 +47,7 @@ a.two {
   overflow: hidden;
   background-color: $backgroundColor;
   /* commented for demo */
-  vertical-align: left;
+  vertical-align: middle;
   margin-left: 10px;
   margin-top: 10px;
   margin-bottom: 10px;
