--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,6 +18,7 @@ layout: default
         We put forward a general synthetic iterative scheme (GSIS) for steady/transient solutions of kinetic equations and reconstructing multiscale gas/phonon transport phenomena reliably. The scheme has merits of fast convergence and asymptotic preserving, and can reduce consuming of computational resources by several orders of magnitude.
       </div>
       <div class="grid-item rect_image"><img src="/assets/img/1DFourier_decay_GSIS.jpg"></div>
+      <div class="grid-item rect_image"></div>
       <div class="grid-item">
       <h6 class="fw-bold">Discontinuous Galerkin method for kinetic equations/macroscopic equations</h6>
       </div>
@@ -25,13 +26,6 @@ layout: default
 
     <p class="mt-2 fst-italic"><a class="two" href="/research">read full research topics</a></p>
   </div>
-</div>
-
-<div class="grid-container">
-  <div class="grid-item">1</div>
-  <div class="grid-item">2</div>
-  <div class="grid-item">3</div>
-  <div class="grid-item">4</div>
 </div>
 
 
