--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -67,7 +67,7 @@ a.two {
 
 .grid-container{
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto auto auto;
   column-gap: 10px;
 }
 
