--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@ layout: default
       <div class="grid-item"></div>
       <div class="grid-item">
         <h6 class="fw-bold">Discontinuous Galerkin method for kinetic equations/macroscopic equations</h6>
-        We develop optimal solution strategies for the high-order discontinuous Galerkin methods to make the kinetic and macroscopic moment solvers in the GSIS robust and economical for practical enegineering-design simulations.
+        We develop optimal solution strategies for the high-order discontinuous Galerkin methods that are adopted in the kinetic/macroscopic moment solvers in the GSIS, to make the simulation tool robust and economical for practical enegineering-design simulations.
       </div>
     </div>
 
