--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,6 +23,8 @@ layout: default
         <h6 class="fw-bold">Discontinuous Galerkin method for kinetic equations/macroscopic equations</h6>
         We develop optimal solution strategies for the high-order discontinuous Galerkin methods that are adopted in the kinetic/macroscopic moment solvers in the GSIS, to make the simulation tool robust and economical for practical enegineering-design simulations.
       </div>
+      <div class="grid-item rect_image"><img src="/assets/img/HypersonicMesh.png"></div>
+      <div class="grid-item rect_image"><img src="/assets/img/HypersonicT.png"></div>
     </div>
 
     <p class="mt-2 fst-italic"><a class="two" href="/research">read full research topics</a></p>
