--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,9 +18,7 @@ layout: default
         We put forward a general synthetic iterative scheme (GSIS) for steady/transient solutions of kinetic equations and reconstructing multiscale gas/phonon transport phenomena reliably. The scheme has merits of fast convergence and asymptotic preserving, and can reduce consuming of computational resources by several orders of magnitude.
       </div>
       <div class="grid-item rect_image"><img src="/assets/img/HeatConduction.jpg"></div>
-      <div class="grid-item"></div>
-      <div class="grid-item rect_image"><img src="/assets/img/HypersonicMesh.png"></div>
-      <div class="grid-item rect_image"><img src="/assets/img/HypersonicT.png"></div>
+      <div class="grid-item rect_image"><img src="/assets/img/HypersonicMesh.png"><img src="/assets/img/HypersonicT.png"></div>
       <div class="grid-item">
         <h6 class="fw-bold">Discontinuous Galerkin method for kinetic equations/macroscopic equations</h6>
         We develop optimal solution strategies for the high-order discontinuous Galerkin methods that are adopted in the kinetic/macroscopic moment solvers in the GSIS, to make the simulation tool robust and economical for practical enegineering-design simulations.
